2012-12-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: remove look_for_cmd().

2012-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.c (look_for_cmd): Do not compute unused value.
	* win32lib.c (look_for_cmd, kpathsea_win32_popen): Same.

2012-11-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmf.cnf: Increase main_memory, font_mem_size, hash_extra,
	and pool_size.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mingw32.c: use stat in static int is_dir ().

2012-10-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: use stat in static int is_dir ().

2012-10-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c: remove _osver since it is obsolete.

2012-09-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.h: remove definition of mkdir.
	* c-proto.h: introduce NO_KPSE_DLL as in getopt.h.

2012-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-std.h: Define M_PI if not defined by <math.h> (old MSVC).

2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../am/bin_links.am.

2012-08-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.h: remove definition of pipe.

2012-08-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Bail out for a badly broken snprintf()
        (hopefully this will not happen).
	Check if we need (v)snprintf wrapper functions.
	* config.h: If needed, declare (v)snprintf wrapper functions.
	* progname.c (kpathsea_set_program_name): Check snprintf sanity.

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Add AC_CHECK_SIZEOF([long]).
	* types.h: #include <inttypes.h> and <stdint.h> if they exist.
	If necessary #define PRId64 & Co.

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* getopt.c [WIN32 && ! __CYGWIN__]: Use __CYGWIN__ instead of
	__CYGWIN32__ which is deprecated and may be removed.